--- a/WorkoutEgg/WorkoutEgg-Watch-App-Info.plist
+++ b/WorkoutEgg/WorkoutEgg-Watch-App-Info.plist
@@ -6,5 +6,11 @@
 	<array>
 		<string>VCR_OSD_MONO.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>WKBackgroundModes</key>
+	<array/>
 </dict>
 </plist>
